# lantern-templates

./: index.yaml
django/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
django/{{project_name}}/: .env.example  .gitignore  conftest.py  manage.py
django/{{project_name}}/tests/: test_settings.py
django/{{project_name}}/{{project_name}}/: asgi.py  celery.py  urls.py  wsgi.py
django/{{project_name}}/{{project_name}}/apps/core/: apps.py  models.py  views.py
django/{{project_name}}/{{project_name}}/apps/users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
django/{{project_name}}/{{project_name}}/settings/: base.py  development.py  production.py  test.py
fastapi/: .env.example  .gitignore  AGENT.md  README.md  docker-compose.yml  pyproject.toml
fastapi/lantern/: api.ltn
fastapi/{{project_name}}/: __init__.py  main.py
fastapi/{{project_name}}/core/: config.py  database.py
fastapi/{{project_name}}/models/: __init__.py  item.py  user.py
fastapi/{{project_name}}/routers/: health.py  items.py  users.py
fastapi/{{project_name}}/schemas/: __init__.py  health.py  item.py  user.py
rails/: .dockerignore  .rubocop.yml  Dockerfile  Gemfile  README.md  docker-compose.yml
rails/{{project_name}}/: .gitignore
rails/{{project_name}}/app/controllers/: application_controller.rb  errors_controller.rb  health_controller.rb
rails/{{project_name}}/app/controllers/api/v1/: base_controller.rb  users_controller.rb
rails/{{project_name}}/app/controllers/api/v1/auth/: registrations_controller.rb  sessions_controller.rb
rails/{{project_name}}/app/models/: user.rb
rails/{{project_name}}/app/serializers/: user_serializer.rb
rails/{{project_name}}/config/: application.rb  database.yml  puma.rb  routes.rb
rails/{{project_name}}/config/environments/: development.rb  production.rb
rails/{{project_name}}/config/initializers/: devise.rb  redis.rb
rails/{{project_name}}/db/migrate/: 001_devise_create_users.rb
rails/{{project_name}}/spec/: rails_helper.rb  spec_helper.rb
rails/{{project_name}}/spec/factories/: users.rb
rails/{{project_name}}/spec/models/: user_spec.rb
rails/{{project_name}}/spec/requests/: health_spec.rb
rails/{{project_name}}/spec/requests/api/v1/: users_spec.rb
rails/{{project_name}}/spec/support/: json_response_helpers.rb
